k8s/web3auth/web3auth-deployment-dev2.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web3-auth
  labels:
    app: web3-auth
    tier: compute
spec:
  replicas: 2
  revisionHistoryLimit: 0
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web3-auth
        tier: compute
    spec:
      containers:
      - image: kauriorg/web3auth:0.0.23
        command:
          - "java"
          - "-jar"
          - "app.jar"
          - "--spring.config.additional-location=${WEB3AUTH_CONF}"
        imagePullPolicy: Always
        name: web3-auth
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      volumes:
      - name: config-volume
        configMap:
          name: web3-auth-config
