k8s/web3auth/web3auth-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: web3-auth
  labels:
    app: web3-auth
spec:
  sessionAffinity: "ClientIP"
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: web3-auth
