k8s/web3auth/web3auth-ingress-uat.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/websocket-services: "web3-auth"
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/tls-acme: "true"
  name: web3uth-ingress
  namespace: uat
spec:
  tls:
  - hosts:
    - api.kauri.io
    secretName: uat-web3uth-tls-new
  rules:
    - host: api.kauri.io
      http:
        paths:
          - backend:
              serviceName: web3-auth
              servicePort: 8080
            path: /web3auth
